conditions.Conditions.scala.code
if (estFaceMur()==true){
  recule()
  
}else{
  avance()
  
}

if